# rusty-smith

./: .env-example  .env.example  .gitignore  Cargo.toml  README.md
assets/templates/: archive-item.html  feed-entry.xml  feed.xml  homepage.html  page.html  post.html  search.html
pages.example/: about-me.md
public/css/: styles.css
public/js/: search.js
src/: builder.rs  commands.rs  main.rs  parser.rs  plugin.rs
src/builder/: feed.rs  homepage.rs  post.rs
src/plugins/: build.rs  mod.rs  posts.rs
src/plugins/feed/: mod.rs
src/plugins/homepage/: mod.rs
src/plugins/pages/: mod.rs
src/plugins/post/: mod.rs
src/plugins/search/: mod.rs
src/plugins/sitemap/: mod.rs
