[package]
name = "file-parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
markdown = "1.0.0-alpha.15"
serde_yaml = "0.9.27"

[dev-dependencies]                                                                                      
tempfile = "3.8"